2015-01-22  Paul Eggert  <eggert@cs.ucla.edu>

	Don't downcase system diagnostics' first letters
	* fileio.c (report_file_errno): Don't downcase, and simplify.
	Fixes: bug#19642

	Isolate NIL_IS_ZERO-assuming code better
	Suggested by Stefan Monnier in:
	http://lists.gnu.org/archive/html/emacs-devel/2015-01/msg00588.html
	* alloc.c (allocate_pseudovector):
	Use memclear, not memsetnil, to remove a 'verify'.
	* callint.c (Fcall_interactively):
	* dispnew.c (realloc_glyph_pool):
	* xdisp.c (init_iterator):
	Use memclear, not memset, to remove a 'verify'.
	* lisp.h (memclear): Rename from memsetnil, and take a byte
	count rather than a word count.  All callers changed.

2015-01-20  Paul Eggert  <eggert@cs.ucla.edu>

	Undo port to hypothetical nonzero Qnil case
	This mostly undoes the previous change in this area.  See:
	http://lists.gnu.org/archive/html/emacs-devel/2015-01/msg00570.html
	* alloc.c (allocate_pseudovector):
	* callint.c (Fcall_interactively):
	* dispnew.c (realloc_glyph_pool):
	* fringe.c (init_fringe):
	* lisp.h (memsetnil):
	* xdisp.c (init_iterator):
	Simplify by assuming that Qnil is zero, but verify the assumption.
	* lisp.h (NIL_IS_ZERO): Revert back to this symbol, removing
	NIL_IS_NONZERO.  All uses changed.

2015-01-20  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (EV_TRAILER2): Set Vinhibit_quit to Qt (Bug#19531).

2015-01-20  Dmitry Antipov  <dmantipov@yandex.ru>

	Prefer xlispstrdup to avoid dumb calls to strlen.
	* nsfont.m (ns_get_family):
	* nsterm.m (ns_term_init):
	* w32fns.c (w32_window):
	* xfns.c (x_window, Fx_select_font): Use xlispstrdup.

2015-01-20  Paul Eggert  <eggert@cs.ucla.edu>

	Correct an old fix for GTK font selection
	* gtkutil.c (xg_get_font): Fix off-by-2 typo.
	Fixes: bug#3228

	Fix minor bugs with printing null bytes
	* minibuf.c (read_minibuf_noninteractive):
	* xdisp.c (Ftrace_to_stderr) [GLYPH_DEBUG]:
	Work even if the Lisp string contains a null byte.

	Port to hypothetical case where Qnil is nonzero